// Copyright (c) HashiCorp, Inc.
// SPDX-License-Identifier: BUSL-1.1

syntax = "proto3";

package controller.storage.apptoken.store.v1;

import "controller/storage/timestamp/v1/timestamp.proto";

option go_package = "github.com/hashicorp/boundary/internal/apptoken/store;store";

message AppToken {
  // @inject_tag: `gorm:"primary_key"`
  string public_id = 10;

  // The create_time is set by the database.
  // @inject_tag: `gorm:"default:current_timestamp"`
  timestamp.v1.Timestamp create_time = 20;

  // The expiration_time is the exp time of the token
  // @inject_tag: `gorm:"not_null"`
  timestamp.v1.Timestamp expiration_time = 30;

  // name is optional. If set, it must be unique within scope_id.
  // @inject_tag: `gorm:"default:null"`
  string name = 40;

  // description is optional.
  // @inject_tag: `gorm:"default:null"`
  string description = 50;

  // The user id that created the apptoken from the user history table.
  // @inject_tag: `gorm:"not_null"`
  string created_by = 60;

  // The scope_id of the owning scope. Must be set.
  // @inject_tag: `gorm:"not_null"`
  string scope_id = 70;

  // expiration_interval_in_max_seconds (optional) is the periodic expiration
  // interval of the app token
  // @inject_tag: `gorm:"-"`
  uint32 expiration_interval_in_max_seconds = 80;
}

message AppTokenPeriodicExpirationInterval {
  // The app token for this expiration
  // @inject_tag: `gorm:"primary_key"`
  string app_token_id = 10;

  // @inject_tag: `gorm:"not_null"`
  uint32 expiration_interval_in_max_seconds = 20;
}

message AppTokenGrant {
  // The create_time is set by the database.
  // @inject_tag: `gorm:"default:current_timestamp"`
  timestamp.v1.Timestamp create_time = 10;

  // The app token for this grant
  // @inject_tag: `gorm:"primary_key"`
  string app_token_id = 20;

  // canonical_grant is the canonical string representation of the grant value.
  // We use this as the unique constraint.
  // @inject_tag: `gorm:"primary_key"`
  string canonical_grant = 30;

  // raw_grant is the string grant value as provided by the user
  // @inject_tag: `gorm:"not_null"`
  string raw_grant = 40;
}

message AppTokenUsage {
  // app_token_id is the identifier for the app token.
  // @inject_tag: `gorm:"primary_key"`
  string app_token_id = 10;

  // The create_time is set by the database.
  // @inject_tag: `gorm:"primary_key"`
  timestamp.v1.Timestamp create_time = 20;

  // client_tcp_address is the address of the client request using the app token.
  // @inject_tag: `gorm:"not_null"`
  string client_tcp_address = 30;

  // request_method is the http method of the client request.
  // @inject_tag: `gorm:"not_null"`
  string request_method = 40;

  // request_path is the http path in the client request
  // @inject_tag: `gorm:"not_null"`
  string request_path = 50;
}
